Overflow fix II

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@
     align-items: center;
     
     overflow: auto;
+    white-space: initial;
 }
 
 #size{
